[package]
name = "xlsx-in-rust-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42", features = ["full"] }
warp = "0.3"
thiserror = "1.0.20"
chrono = { version = "0.4.13", features = ["serde"] }
rust_xlsxwriter = "0.80"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "=1.4.0"
